@@ -180,6 +180,8 @@ persist.keyGenWrongType=\
 #
 # Mapping and descriptor errors
 #
+mapping.missingFieldName=\
+    Missing field name in mapping of class {0}
 mapping.classNotConstructable=\
     The Java class {0} is not constructable -- it does not contain \
     a default public constructor
@@ -201,7 +203,6 @@ mapping.writeMethodNoParam=\
     The write method {0} in class {1} must have one parameter
 mapping.readMethodHasParam=\
     The read method {0} in class {1} must not have any parameters
-
 mapping.fieldTypeMismatch=\
     The field {0} is not of the specified type {1}
 mapping.accessorReturnTypeMismatch=\
